working on fixing tinker analysis bug